--- a/src/listview/package.json
+++ b/src/listview/package.json
@@ -1,14 +1,11 @@
 {
   "devDependencies": {
-    "bower": "^1.3.9",
-    "grunt": "^0.4.5",
     "grunt-bower-task": "^0.4.0",
-    "grunt-cli": "^0.1.13",
-    "grunt-shell": "^1.1.1",
     "load-grunt-tasks": "^0.6.0"
   },
-  "name": "ksimple-demos",
-  "description": "demos\r =====",
+  "name": "ksimple-demos-listview",
+  "description": "listview",
+  "readme": "listview",
   "version": "0.0.0",
   "main": "index.js",
   "dependencies": {},
