--- a/src/listview/package.json
+++ b/src/listview/package.json
@@ -1,6 +1,8 @@
 {
   "devDependencies": {
+    "grunt": "^0.4.5",
     "grunt-bower-task": "^0.4.0",
+    "grunt-contrib-copy": "^0.5.0",
     "load-grunt-tasks": "^0.6.0"
   },
   "name": "ksimple-demos-listview",
