--- a/src/listview/bower.json
+++ b/src/listview/bower.json
@@ -19,6 +19,7 @@
     "ng-table": "~0.3.3",
     "footable": "~2.0.1",
     "DataTables": "~1.10.2",
-    "requirejs": "~2.1.15"
+    "requirejs": "~2.1.15",
+    "angular-route": "~1.2.24"
   }
 }
