--- a/src/listview/bower.json
+++ b/src/listview/bower.json
@@ -20,6 +20,9 @@
     "footable": "~2.0.1",
     "DataTables": "~1.10.2",
     "requirejs": "~2.1.15",
-    "angular-route": "~1.2.24"
+    "angular-route": "~1.2.24",
+    "angular-winjs": "~1.0.0",
+    "bootstrap": "~3.2.0",
+    "require-css": "~0.1.5",
   }
 }
