--- a/src/listview-approval/bower.json
+++ b/src/listview-approval/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "listview",
+  "name": "listview-approval",
   "version": "0.0.0",
   "homepage": "https://github.com/ksimple/demos",
   "moduleType": [
@@ -16,13 +16,8 @@
   ],
   "dependencies": {
     "ng-grid": "~2.0.13",
-    "ng-table": "~0.3.3",
-    "footable": "~2.0.1",
-    "DataTables": "~1.10.2",
-    "requirejs": "~2.1.15",
+    "require-css": "~0.1.5",
     "angular-route": "~1.2.24",
-    "angular-winjs": "~1.0.0",
-    "bootstrap": "~3.2.0",
-    "require-css": "~0.1.5"
+    "requirejs": "~2.1.15"
   }
 }
