Revert "Add prototype of listview in approval form"
This reverts commit 1c76114dd8347d7bd3feac7fd1f87046fd845020.

--- a/src/listview/bower.json
+++ b/src/listview/bower.json
@@ -23,6 +23,6 @@
     "angular-route": "~1.2.24",
     "angular-winjs": "~1.0.0",
     "bootstrap": "~3.2.0",
-    "require-css": "~0.1.5"
+    "require-css": "~0.1.5",
   }
 }
